--- a/tester/package.json
+++ b/tester/package.json
@@ -2,7 +2,7 @@
   "name": "tester",
   "version": "1.0.0",
   "description": "",
-  "main": "poop.js",
+  "main": "main.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
