--- a/TRIUMF-backend/package.json
+++ b/TRIUMF-backend/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "express-xml-bodyparser": "^0.3.0",
     "install": "^0.13.0",
+    "needle": "^3.2.0",
     "node-fetch": "^3.2.10",
     "npm": "^8.19.2",
     "serve-favicon": "^2.5.0",
